# ignis-setup

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  index.html  package-lock.json  package.json  vite.config.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  os_compat_report.md
.github/workflows/: ci.yml  dependency-review.yml  flatpak.yml  nightly.yml  release.yml
flatpak/: io.github.billywalters.ignis-setup.desktop  io.github.billywalters.ignis-setup.metainfo.xml  io.github.billywalters.ignis-setup.yml
handbrake-presets/: animationav1_final.json  animeav1_final.json  liveav1_final.json  oldanimeav1_final.json  oldliveav1_final.json
scripts/: _common.sh  migrate-jellyfin.sh  setup-all.sh  setup-discord.sh  setup-dlss-updater.sh  setup-emudeck.sh  setup-ge-proton.sh  setup-handbrake.sh  setup-mpv-hdr.sh  setup-obs.sh  setup-optiscaler-client.sh  setup-vscode.sh
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: ge_proton.rs  install_log.rs  installs.rs  jellyfin.rs  lib.rs  main.rs  network.rs  system.rs  types.rs
src/components/: AppPanels.jsx  GeProtonPanel.jsx  WelcomeScreen.jsx  ui.jsx
src/context/: SysInfoContext.js
src/hooks/: useInstallLog.js
src/lib/: apps.js  network.js  tauri.js
