[package]
name    = "ignis-setup"
version = "1.0.0"
edition = "2021"

[lib]
name         = "ignis_setup_lib"
crate-type   = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ignis-setup"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
